# recipe_agent

./: .env.example  .gitignore  README.md  app.py  graph.py  ingest.py  nodes.py  pantry.py  pyproject.toml  rag.py  run.py  state.py  tools.py
agent_files/: db_client.py  graph.py  tools.py
app/: README.md  app.py  graph.py  ingest.py
recipe_books/: book.json.example  ottolenghi_comfort_recipes.json  ottolenghi_extra_good_things_recipes.json  ottolenghi_flavour_recipes.json  ottolenghi_shelf_love_recipes.json  ottolenghi_simple_recipes.json
